--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,7 +30,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v .
+      run: echo "Try to build nothing...."  #go build -v .
 
     - name: Test
-      run: go test -v .
+      run: echo "Make test not war!" # go test -v .
